--- a/src/views/user/register.handlebars
+++ b/src/views/user/register.handlebars
@@ -16,7 +16,7 @@
 {{/if}}
 
 <div>
-  <form action="/api/sessioncapas/register" method="post">
+  <form action="/api/session/register" method="post">
    <!-- <form action="/api/sessioncapas/register" method="post"></form> -->
     <label for="nombre-cliente">Nombre del usuario</label><br />
     <input
